Fixing footer overflow from added link (#38)

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -8,8 +8,6 @@
   clear: both;
   text-align: center;
 
-  ul { padding: 0; }
-
   .copyright {
     font-size: 0.87em;
     margin-bottom: -1em;
@@ -25,9 +23,7 @@
 
   #ssl-badge { display: none; }
 
-  .nav-footer {
-    padding: 2em 0em;
-  }
+  .nav-footer { padding: 2em 0em; }
 
   .nav-footer-items {
     margin: 0 auto;
@@ -188,8 +184,8 @@
     }
 
     .nav-footer {
-      margin: 0 3.5em;
-      padding: 2em 3.5em;
+      margin: 0 3em;
+      padding: 2em 3em;
     }
   }
 }
